--- a/tests.ipynb
+++ b/tests.ipynb
@@ -2,7 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
+   "id": "19554894",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f28a396e",
    "metadata": {},
    "outputs": [],
@@ -18,9 +38,16 @@
     "\n",
     "from torch.utils.data import DataLoader\n",
     "import torch.nn as nn\n",
-    "import torchmetrics\n",
-    "# from collections import namedtuple\n",
-    "\n",
+    "import torchmetrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "5b4ce8e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from ldm_ludo import diff_model as dm\n",
     "from ldm_ludo import data\n",
     "from ldm_ludo import plots\n",
@@ -46,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1ab0d27b",
    "metadata": {},
    "outputs": [],
@@ -55,14 +82,14 @@
     "torch.manual_seed(42)\n",
     "\n",
     "# Variance schedule: get alphas and betas\n",
-    "T = int(10)\n",
+    "T = int(1000)\n",
     "embed_dim = 64 # TODO change this for time embedding\n",
     "alphas, betas, alpha_bars = dm.variance_schedule(T)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d658b3b5",
    "metadata": {},
    "outputs": [],
@@ -80,7 +107,27 @@
    "execution_count": null,
    "id": "7cbbede7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/1,                      train loss: 0.0863, train metric: 1.24, valid metric: 0.264\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'diffusion_model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 11\u001b[39m\n\u001b[32m      7\u001b[39m history = training.train(diffusion_model, optimizer, huber, rmse, train_loader,\n\u001b[32m      8\u001b[39m                 valid_loader, device=device, n_epochs=\u001b[32m1\u001b[39m)\n\u001b[32m     10\u001b[39m \u001b[38;5;66;03m# save model's trained weights\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m \u001b[43mutils\u001b[49m\u001b[43m.\u001b[49m\u001b[43msave_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdiffusion_model\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Dev/personale/jup-notebooks/dm_project/ldm_ludo/utils.py:31\u001b[39m, in \u001b[36msave_model\u001b[39m\u001b[34m(model)\u001b[39m\n\u001b[32m     29\u001b[39m timestamp = datetime.now().strftime(\u001b[33m\"\u001b[39m\u001b[33m%\u001b[39m\u001b[33mY\u001b[39m\u001b[33m%\u001b[39m\u001b[33mm\u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[33m_\u001b[39m\u001b[33m%\u001b[39m\u001b[33mH\u001b[39m\u001b[33m%\u001b[39m\u001b[33mM\u001b[39m\u001b[33m%\u001b[39m\u001b[33mS\u001b[39m\u001b[33m\"\u001b[39m)  \u001b[38;5;66;03m# e.g. 20251215_142530\u001b[39;00m\n\u001b[32m     30\u001b[39m filename = \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mweights/diff_model_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtimestamp\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m.pt\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m31\u001b[39m torch.save(\u001b[43mdiffusion_model\u001b[49m.state_dict(), filename)\n",
+      "\u001b[31mNameError\u001b[39m: name 'diffusion_model' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# let's train the model\n",
     "torch.manual_seed(42)\n",
@@ -89,10 +136,40 @@
     "optimizer = torch.optim.NAdam(diffusion_model.parameters(), lr=3e-3)\n",
     "rmse = torchmetrics.MeanSquaredError(squared=False).to(device)\n",
     "history = training.train(diffusion_model, optimizer, huber, rmse, train_loader,\n",
-    "                valid_loader, device=device, n_epochs=1)\n",
-    "\n",
+    "                valid_loader, device=device, n_epochs=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "2515aeb7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ldm_ludo import utils"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "71ef0b4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'ldm_ludo.utils' has no attribute 'save_modelmodel'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[20]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# save model's trained weights\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43mutils\u001b[49m\u001b[43m.\u001b[49m\u001b[43msave_modelmodel\u001b[49m(diffusion_model)\n",
+      "\u001b[31mAttributeError\u001b[39m: module 'ldm_ludo.utils' has no attribute 'save_modelmodel'"
+     ]
+    }
+   ],
+   "source": [
     "# save model's trained weights\n",
-    "utils.save_model(diffusion_model)"
+    "utils.save_modelmodel(diffusion_model)"
    ]
   },
   {
@@ -103,7 +180,7 @@
    "outputs": [],
    "source": [
     "# Generate images\n",
-    "X_gen = dm.generate_ddpm(diffusion_model)  # generated images\n",
+    "X_gen = dm.generate_ddpm(diffusion_model, device)  # generated images\n",
     "utils.plot_multiple_images(X_gen, 8)\n",
     "plt.show()"
    ]
@@ -113,10 +190,23 @@
    "execution_count": null,
    "id": "0becbac1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'device' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[21]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# use DDIM sampling\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m X_gen_ddim = \u001b[43mdm\u001b[49m\u001b[43m.\u001b[49m\u001b[43mgenerate_ddim\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdiffusion_model\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_steps\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m500\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m utils.plot_multiple_images(X_gen_ddim, \u001b[32m8\u001b[39m)\n\u001b[32m      4\u001b[39m plt.show()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Dev/personale/jup-notebooks/dm_project/ldm_ludo/diff_model.py:172\u001b[39m, in \u001b[36mgenerate_ddim\u001b[39m\u001b[34m(model, batch_size, num_steps, eta)\u001b[39m\n\u001b[32m    170\u001b[39m model.eval()\n\u001b[32m    171\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m torch.no_grad():\n\u001b[32m--> \u001b[39m\u001b[32m172\u001b[39m     xt = torch.randn([batch_size, \u001b[32m1\u001b[39m, \u001b[32m28\u001b[39m, \u001b[32m28\u001b[39m], device=\u001b[43mdevice\u001b[49m)\n\u001b[32m    173\u001b[39m     times = torch.linspace(T - \u001b[32m1\u001b[39m, \u001b[32m0\u001b[39m, steps=num_steps + \u001b[32m1\u001b[39m).long().tolist()\n\u001b[32m    174\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m t, t_prev \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(times[:-\u001b[32m1\u001b[39m], times[\u001b[32m1\u001b[39m:]):\n",
+      "\u001b[31mNameError\u001b[39m: name 'device' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# use DDIM sampling\n",
-    "X_gen_ddim = dm.generate_ddim(diffusion_model, num_steps=500)\n",
+    "X_gen_ddim = dm.generate_ddim(diffusion_model, device, num_steps=500)\n",
     "utils.plot_multiple_images(X_gen_ddim, 8)\n",
     "plt.show()"
    ]
